[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Haseeb Qureshi"]
description = "A toy P2P application"
license = "MIT"
name = "p2p"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1.2"
flask-cors = "^3.0"
python = "^3.8"
sympy = "^1.5.1"
waitress = "^1.4.3"
[tool.poetry.dev-dependencies]
